--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,33 @@
 {
-  "name": "kevinem/oauth2-adobe-sign",
+  "name": "olsgreen/oauth2-adobe-sign",
   "description": "Adobe Sign OAuth 2.0 Client Provider for The PHP League OAuth2-Client",
   "require": {
-    "php": ">=5.6.0",
-    "league/oauth2-client": "^1.4"
+    "php": "^5.6 || ^7.0 || ^8.0",
+    "league/oauth2-client": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.4",
-    "mockery/mockery": "^0.9.5"
+    "phpunit/phpunit": "^5.7 || ^6.0 || ^9.3",
+    "mockery/mockery": "^1.3"
   },
   "license": "MIT",
   "authors": [
     {
       "name": "Kevin Em",
       "email": "kevinem@thinkdevise.com"
+    },    
+    {
+      "name": "Oliver Green",
+      "email": "green2go@gmail.com"
     }
   ],
   "autoload": {
     "psr-4": {
-      "KevinEm\\OAuth2\\Client\\": "src/"
+      "Olsgreen\\OAuth2\\Client\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "KevinEm\\OAuth2\\Client\\Test\\": "tests/"
+      "Olsgreen\\OAuth2\\Client\\Test\\": "tests/"
     }
   }
 }
